--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/puppeteer": "^5.4.5",
+    "dotenv": "^16.0.1",
+    "node-fetch": "2",
     "nodemon": "^2.0.15",
     "puppeteer": "^13.5.2",
+    "puppeteer-stream": "^2.0.9",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3"
   }
