--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
       "module": "commonjs",
       "noImplicitAny": false,
-      "sourceMap": true,
+      "sourceMap": false,
       "removeComments": true,
       "preserveConstEnums": true,
       "declaration": true,
