--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "scripts": {
     "build-ts": "tsc",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "soundcloud": "node ./dist/crawler/soundcloud-api.js",
+    "soundcloud-start": "pm2 start ecosystem.config.js",
+    "soundcloud-stop": "pm2 stop ecosystem.config.js"
   },
   "keywords": [],
   "author": "",
