--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "2",
     "nodemon": "^2.0.15",
     "pm2": "^5.2.0",
+    "puppeteer": "^19.10.1",
     "tsc": "^2.0.4",
     "typescript": "^4.6.3"
   }
